Crash happens when testing GL_PIXEL_PACK_BUFFER
OS: Ubuntu 20.04 Mesa: master(2021/01/20) GPU name: Intel HD Graphics 630(rev 04)
Note: This issue cannot be reproduced on Mesa 20.0.8.
Case Description:
- Create a GL_TEXTURE_3D texture
texture
, levels = 2, [w, h, d] = [4, 4, 4], initialize texture data. 2 Create a GL_PIXEL_PACK_BUFFER bufferbuffer
. 3 Attachtexture
level = 1, layer = 1 to a fbo. - Call glReadPixels to read fbo content to buffer.
- Expect buffer content is the same with 'texture'(level = 1, layer = 1)
Reproduced steps:
- Compile attached file using "g++ -o MipLayerAttachment3DPBO MipLayerAttachment3DPBO.cpp -lX11 -lepoxy";
- Run "./MipLayerAttachment3DPBO", you could get the result.
- Crash happens, core dump.